[gd_scene load_steps=5 format=3 uid="uid://bot0igica2l37"]

[ext_resource type="Script" uid="uid://sh6qlgegftur" path="res://DeployUnit.gd" id="1_m3so0"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0wlci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsfke"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wlci"]
bg_color = Color(0, 0, 0, 1)

[node name="DeployUnit" type="Node2D"]
script = ExtResource("1_m3so0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 422.0
offset_bottom = 279.0

[node name="title" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 14.0
offset_top = 6.0
offset_right = 209.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Deploy a Unit"

[node name="CostLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 101.0
offset_top = 198.0
offset_right = 325.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "cost: 76 resource pts"

[node name="LevelNode" type="Node2D" parent="ColorRect"]

[node name="Level 1" type="CheckBox" parent="ColorRect/LevelNode"]
offset_left = 44.0
offset_top = 93.0
offset_right = 126.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_checked_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_unchecked_color = Color(0, 0, 0, 1)
button_pressed = true
button_group = SubResource("ButtonGroup_0wlci")
text = "Level 1"
metadata/_edit_use_anchors_ = true

[node name="Level 2" type="CheckBox" parent="ColorRect/LevelNode"]
offset_left = 164.0
offset_top = 95.0
offset_right = 246.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_checked_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_unchecked_color = Color(0, 0, 0, 1)
button_group = SubResource("ButtonGroup_0wlci")
text = "Level 2"
metadata/_edit_use_anchors_ = true

[node name="Level 3" type="CheckBox" parent="ColorRect/LevelNode"]
offset_left = 287.0
offset_top = 97.0
offset_right = 369.0
offset_bottom = 128.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_checked_color = Color(0, 0, 0, 1)
theme_override_colors/checkbox_unchecked_color = Color(0, 0, 0, 1)
button_group = SubResource("ButtonGroup_0wlci")
text = "Level 3"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ColorRect/LevelNode"]
offset_left = 39.0
offset_top = 64.0
offset_right = 234.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Pick a Level"
metadata/_edit_use_anchors_ = true

[node name="SizeNode" type="Node2D" parent="ColorRect"]

[node name="title" type="Label" parent="ColorRect/SizeNode"]
offset_left = 39.0
offset_top = 134.0
offset_right = 234.0
offset_bottom = 176.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Unit Size"
metadata/_edit_use_anchors_ = true

[node name="SizeLabel" type="Label" parent="ColorRect/SizeNode"]
offset_left = 299.0
offset_top = 160.0
offset_right = 494.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "500 troops"
metadata/_edit_use_anchors_ = true

[node name="HSlider" type="HSlider" parent="ColorRect/SizeNode"]
offset_left = 41.0
offset_top = 162.0
offset_right = 286.0
offset_bottom = 184.0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qsfke")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_0wlci")
min_value = 500.0
max_value = 15000.0
value = 500.0
rounded = true

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 170.0
offset_top = 237.0
offset_right = 232.0
offset_bottom = 268.0
text = "Deploy"

[connection signal="toggled" from="ColorRect/LevelNode/Level 1" to="." method="_on_level_1_toggled"]
[connection signal="toggled" from="ColorRect/LevelNode/Level 2" to="." method="_on_level_2_toggled"]
[connection signal="toggled" from="ColorRect/LevelNode/Level 3" to="." method="_on_level_3_toggled"]
[connection signal="value_changed" from="ColorRect/SizeNode/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/SizeNode/HSlider" to="ColorRect/SizeNode" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
